@@ -6,6 +6,9 @@ config = Config(".env")
 
 
 BACKEND_CORS_ORIGINS = config("BACKEND_CORS_ORIGINS", cast=str, default="*")
+DEFAULT_CACHECONTROL = config(
+    "DEFAULT_CACHECONTROL", cast=str, default="public, max-age=3600"
+)
 
 
 DISABLE_CACHE = config("DISABLE_CACHE", cast=str, default=None)
